README: add MIT license declaration
Signed-off-by: Hongxu Jia <hongxu.jia@windriver.com>

--- a/README
+++ b/README
@@ -364,3 +364,9 @@ Building the target installer
              target_build2 and target_build3 will work similarly.
 
 
+License
+-------
+
+All metadata is MIT licensed unless otherwise stated. Source code included
+in tree for individual recipes is under the LICENSE stated in each recipe
+(.bb file) unless otherwise stated.
